--- a/gb/23/9/18/n14076123.md
+++ b/gb/23/9/18/n14076123.md
@@ -14,52 +14,42 @@
 <p>文化局指出，台中市腹地从海拔0公尺延伸至3,886公尺高，策展人运用CLT技法与材质，呈现城市棱线及多元生态特色，而这次赠予参展业者的纪念奖座，也是采用台中著名粿模工艺匠师郑永斌刻制粿模剩余木料，由艺术家大蔚阿昌将废料再造，并以纯手工打制，符合永续环保理念，也具典藏价值。2023台湾<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E5%8D%9A%E4%BC%9A.md#1">文博会</a>9月26日至10月1日于华山1914文化创意产业园区展出。</p>
 <figure id="14076128" aria-describedby="caption-14076128" style="width: 451px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/09/id14076128-636273-450x303.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://i.epochtimes.com/assets/uploads/2023/09/id14076128-636273-450x303.jpg" alt="以水库底泥砂制作古厝窗花。" width="451" b="304" /></a><figcaption id="caption-14076128" class="wp-caption-text">以水库底泥砂制作古厝窗花。（黄玉燕／大纪元）</figcaption></figure>
 <p>责任编辑：筱珮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/11/n13864165.md#1">“唐吉诃德”进军高雄 陈其迈：耶诞、跨年比去年精彩</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/11/24/n13872046.md#1">闲置17年 爱河湾大元国际大楼年底整建　</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/26/n13892151.md#1">新任里长就职餐叙 黄敏惠率局处长致意</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/19/n13911089.md#1">“ㄇㄚˊ几兔”现身莲池潭 担任高雄灯会大使</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065229.md#1">台南旅游美食护照在手 走跳台南乐逍遥</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076080.md#1">兴富发中捷案复工 中市：完成赔偿才发使照</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075425.md#1">石虎现踪筏子溪  “再现或再也不见”秀生态保育</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075503.md#1">开学季台中定期票热卖  带动公车运量成长15%</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075388.md#1">中秋烤肉聚会 五星饭店法式月光餐吸客</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075413.md#1">雾峰艺术家作品外流 议员建议设纪念室收录</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104274.md#1">买手机赚5千 台中百位大学生遭诈骗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103447.md#1">新社花毯节11月登场 16米漂浮城堡史上最高</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103361.md#1">台中交通罚金半年达标 检举、开罚乱象惹议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103346.md#1">台中鱼市场建市集惹议 议员：活化不能违法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103300.md#1">七期犯罪天堂？ 议员：参考双北控管工商登记</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/1/n9913343.md#1" target="_blank">淳子：闺秀文革自杀名单</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11236766.md#1" target="_blank">幸遇大法重获希望 华府法轮功学员感恩师父</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/6/17/n11326982.md#1" target="_blank">金言：香港反送中会引发“蝴蝶效应”？</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071125.md#1">【人物真相】尹锡悦 坚决抗共的亚洲政治强人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/12/n14014354.md#1">南朝人的奇幻之旅 进入另外空间 看到了世外高人 知道了前朝秘辛</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071134.md#1">【未解之谜】不爱江山爱美人？顺治之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/6/n14067903.md#1">【杨延昭传奇】乱世中的命定姻缘（下）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074103.md#1">【未解之谜】“雷暴哮喘” 《推背图》中的秘密？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14074887.md#1">【全球新闻】金正恩怕遭普京暗杀 防范画面流出</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075303.md#1">【新闻五人行】副国级抓不完 习全面宣战？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074419.md#1">【环球直击】中国房地产续跌 传远洋集团现财务危机</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074346.md#1">岳山：习对全国秘书长下指令 事关防暗杀？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14074942.md#1">习近平撑蔡奇 李强疑被夺政府秘书管理权</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14074761.md#1">前军官：中共093型核潜艇出现故障</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074253.md#1">婚前偕女友飞俄国古堡 徐新洋遵传统访女方家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074691.md#1">陆第一网红李子柒油管停更2年 新视频微博疯传</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/14/n14074019.md#1">周杰伦携昆凌为妈妈庆生 婆媳贴脸合照似母女</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074723.md#1">金马影后李心洁办画展 晒双胞胎儿子“杰作”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074660.md#1">获张震恭喜荣膺金狮奖 梁朝伟回应简讯曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071720.md#1">戒糖后更易减肥 身体发生10大惊人变化</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074370.md#1">iPhone 15手机新功能 帮你找到朋友的位置</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/8/n14069676.md#1">红肉能防皮肤癌？8食物或营养素降黑色素瘤风险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074518.md#1">腌牛排爱用这几味 肉质松软又多汁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073249.md#1">无声延伸的奇迹——疾病源于生活习惯</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104560.md#1">【菁英论坛】习视察央行 人民币面临跳水</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104870.md#1">【晚间新闻】中共紧急发文 严控悼念李克强</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103855.md#1">李克强在上海猝死  分析：疑点重重</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103857.md#1">李克强死亡8小时后发丧 有何黑幕</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14103869.md#1">李克强猝死时刻与毛一致 分析：不排除更大地震</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103752.md#1">进驻大陆平台引尴尬 香港视后唐诗咏被叫错名</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103712.md#1">梁朝伟抵东京影展大师班 忆被王家卫调教演技</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/26/n14103421.md#1">为什么会发生夜间盗汗？ 如何改善？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/18/n14076123.htm">台湾文博会台中馆  永续文创精品先开箱</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076123.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
